[package]
name = "solana-swap"
version = "0.1.0"
authors = ["Nicotinas <rhino879@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.9"

[dev-dependencies]
solana-program-test = "=1.6.9"
solana-sdk = "=1.6.9"

[features]
no-entrypoint = []

[lib]
name = "swap"
crate-type = ["cdylib", "lib"]
